[package]
name = "mysensors-logformatter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# need to instal pkg-config to compile serialport
# serial ports (really udev) not available under WSL2!  
# serialport = "4.0.1"
regex = "1.5.4"
clap = { version = "3.0.1", features = ["derive"] }
log = "0.4"
env_logger = "0.6"
# logwatcher = "0.1.1"
# adds position to start from in the register
logwatcher = { git = "https://github.com/dizda/logwatcher", branch = "feat-pos" }
ctrlc = "3.2.1"
# mysensors-logparser = { path = "../mysensors-logparser"}
mysensors-logparser = { git = "https://github.com/shutterkurt/mysensors-logparser.git" }
